// Generated design. SQL is authoritative for CHECK, partial indexes and delete policy.
Enum device_type_enum {
  router
  switch
  firewall
  access_point
  server
  other
  unknown
}

Table credential_profiles {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  username varchar(100)
  password_encrypted text
  enable_secret_encrypted text
  snmp_community_ro_encrypted text
  ssh_port integer [not null, default: 22]
  snmp_port integer [not null, default: 161]
  description text
  created_by uuid
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table sites {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  location_detail varchar(255)
  description text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table device_groups {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(100) [not null, unique]
  color_tag varchar(7)
  description text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table devices {
  id uuid [pk, default: `gen_random_uuid()`]
  management_ip inet [not null, unique]
  hostname varchar(255)
  device_type device_type_enum [not null, default: 'unknown']
  role varchar(30)
  vendor varchar(50)
  model varchar(100)
  os_version varchar(100)
  serial_number varchar(100)
  chassis_id_subtype smallint
  chassis_id text
  site_id uuid [ref: > sites.id]
  credential_profile_id uuid [ref: > credential_profiles.id]
  platform varchar(50)
  management_state varchar(20) [not null, default: 'active']
  reachability varchar(20) [not null, default: 'unknown']
  enrollment_source varchar(30) [not null]
  last_seen_at timestamptz
  reachability_checked_at timestamptz
  last_collected_at timestamptz [not null]
  uptime_seconds bigint
  uptime_observed_at timestamptz
  notes text
  created_by uuid
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  indexes {
    (site_id)
    (credential_profile_id)
    (hostname)
  }
}

Table device_group_members {
  device_id uuid [not null, ref: > devices.id]
  group_id uuid [not null, ref: > device_groups.id]
  added_at timestamptz [not null, default: `now()`]
  indexes {
    (device_id, group_id) [pk]
    (group_id)
  }
}

Table device_interfaces {
  id uuid [pk, default: `gen_random_uuid()`]
  device_id uuid [not null, ref: > devices.id]
  if_index integer
  name varchar(255) [not null]
  mac_address macaddr
  description varchar(255)
  mode varchar(20) [not null, default: 'unknown']
  access_vlan_id integer
  admin_status varchar(20) [not null, default: 'unknown']
  oper_status varchar(20) [not null, default: 'unknown']
  speed_bps bigint
  collected_at timestamptz [not null]
  retired_at timestamptz
  updated_at timestamptz [not null, default: `now()`]
  indexes {
    (device_id, id) [unique]
  }
}

Table interface_ip_addresses {
  interface_id uuid [not null, ref: > device_interfaces.id]
  address inet [not null]
  indexes {
    (interface_id, address) [pk]
  }
}
